2006-05-18  Julien Puydt  <jpuydt@free.fr>

	* src/gui/callshistory.cpp: Removed a use of magic values I hadn't
	spotted earlier.

2006-05-18  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/ekiga.cpp src/gui/callbacks.cpp:
	Added more status messages in the status bar to clearly indicate what 
	action has been triggered.
	
2006-05-18  Damien Sandras  <dsandras@gnome.org>

	* configure.in:
	Increased dependancy on GNOME 2.14. Too early?

2006-05-18  Julien Puydt  <jpuydt@free.fr>

	* src/gui/druid.h, src/gui/druid.cpp, src/gui/config.cpp: Fixed #330525.

2006-05-17  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/urlhandler.cpp:
	Fixed handling of call forwarding/transfer in case of incoming call.

2006-05-17  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Fixed #339880.

2006-05-17  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Fixed #338597 (thanks Brian Pepple).

2006-05-17  Julien Puydt  <jpuydt@free.fr>

	* src/gui/main.cpp: Fixed #336226 (thanks Fabrice Alphonso).

2006-05-17  Damien Sandras  <dsandras@gnome.org>

	* src/gui/addressbook.cpp:
	Applied patch from Julien Puydt to fix #342140.
	
2006-05-17  Julien Puydt  <jpuydt@free.fr>

	* src/gui/addressbook.cpp: Fixed #340902.

2006-05-16  Julien Puydt  <jpuydt@free.fr>

	* src/devices/videoinput.cpp, src/devices/videoinput.h: Fixed #341314.

2006-05-15  Damien Sandras  <dsandras@gnome.org>

	* src/gui/accounts.cpp:
	Compare accounts using SIPURLs.

2006-05-15  Julien Puydt  <jpuydt@free.fr>

	* src/clients/stun.cpp, src/clients/stun.h: Partial fix for #340939.

2006-05-15  Julien Puydt  <jpuydt@free.fr>

	* src/gui/config.cpp: Fixed #341814, thanks Boying Lu.

2006-05-14  Julien Puydt  <jpuydt@free.fr>

	* src/devices/audio.cpp, src/devices/audio.h: Fixed #341309.

2006-05-13  Damien Sandras  <dsandras@gnome.org>

	* endpoints/h323.cpp endpoints/manager.cpp: 
	Ooops. Fixed previous commit.

2006-05-13  Damien Sandras  <dsandras@gnome.org>
