@@ -378,6 +378,7 @@ void GMURLHandler::Main ()
   GObject *dbus_component = NULL;
 #endif
   GtkWidget *calls_history_window = NULL;
+  CallHistoryItem *call_history_item = NULL;
   
   PString call_address;
   PString current_call_token;
@@ -528,23 +529,23 @@ void GMURLHandler::Main ()
       if (call_address.Find ("+type=directory") != P_MAX_INDEX) {
 
 	gm_main_window_flash_message (main_window, _("User not found"));
-	gm_calls_history_add_call (PLACED_CALL,
-				   NULL,
-				   call_address, 
-				   "0.00",
-				   _("User not found"),
-				   NULL);
+	call_history_item = call_history_item_new ();
+	call_history_item->url = g_strdup (call_address);
+	call_history_item->duration = g_strdup ("0.00");
+	call_history_item->end_reason = g_strdup (_("User not found"));
+	gm_calls_history_add_call (PLACED_CALL, call_history_item);
+	call_history_item_free (call_history_item);
 	endpoint->SetCallingState (GMManager::Standby);
       }
       else {
 	
 	gm_main_window_flash_message (main_window, _("Failed to call user"));
-	gm_calls_history_add_call (PLACED_CALL,
-				   NULL,
-				   call_address, 
-				   "0.00",
-				   _("Failed to call user"),
-				   NULL);
+	call_history_item = call_history_item_new ();
+	call_history_item->url = g_strdup (call_address);
+	call_history_item->duration = g_strdup ("0.00");
+	call_history_item->end_reason = g_strdup (_("Failed to call user"));
+	gm_calls_history_add_call (PLACED_CALL, call_history_item);
+	call_history_item_free (call_history_item);
       }
       gnomemeeting_threads_leave ();
     }
