@@ -1,3 +1,10 @@
+2006-05-20  Julien Puydt  <jpuydt@free.fr>
+
+	* src/gui/callshistory.cpp, src/gui/callshistory.h: Added a new
+	CallHistoryItem structure, to make it easier to fix #338337.
+	* src/endpoints/urlhandler.cpp, src/endpoints/manager.cpp: Adapted to
+	use the new structure.
+
 2006-05-18  Julien Puydt  <jpuydt@free.fr>
 
 	* src/gui/callshistory.cpp: Removed a use of magic values I hadn't
